[FIX] Mail:overlap attachment preview window on chat window

--- a/addons/mail/static/src/less/composer.less
+++ b/addons/mail/static/src/less/composer.less
@@ -338,6 +338,7 @@
 }
 
 .o_modal_fullscreen {
+    z-index: 1102; // To overlap chat window
     .o_viewer_content {
         width: 100%;
         height: 100%;
